--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                             <p class="montserrat py-4 text-secondary w-75" style="font-size: 20px; line-height: 34px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nobis error rerum voluptatum atque? Eum a iste repellendus voluptatibus totam aperiam voluptates fugit nemo, accusamus quidem sint quisquam cum, itaque eius pariatur in, veritatis veniam eaque voluptatem. Molestiae reiciendis, earum repudiandae vel eaque facilis eum aliquam, harum aliquid architecto impedit!</p>
 
-                            <button class="btn fs-1_5 btn-primary text-white px-4 montserrat" style="font-weight: 600;">Baixar CV</button>
+                            <button class="btn fs-1_5 btn-primary text-white px-4 montserrat" style="font-weight: 600;" download="CV">Baixar CV</button>
 
                             <hr class="border my-5">
                         </div>
@@ -129,9 +129,8 @@
                                             <div class="flex flex-row pb-4">
                                                 <img src="./node_modules/bootstrap-icons/icons/house-fill.svg" style="width:7%;" alt="">
                                                 <span class="px-2 w-75 fs-1 montserrat">
-                                                    1234 Somewhere Rd. 
-                                                    Nashville, TN 00000 
-                                                    United States
+                                                    Rua Alexandre Dumas 1711
+                                                    Birmann 12 - São Paulo
                                                 </span>
                                             </div>
 
@@ -158,7 +157,7 @@
                     </div>
 
                     <footer class="bg-light text-center text-dark py-5">
-                        <span class="montserrat">Design By <a href="#">Jacinto Lela</a></span>
+                        <span class="montserrat">Design By <a href="https://jacintolela.github.io/portfolio/"> <strong>Jacinto Lela</strong></a></span>
                     </footer>
                 </div>
                 <!--Col-->
